# robloxliveinstance-mcp

./: .env.example  .gitignore  README.md  idea.md  plan.md  pyproject.toml
.codex/skills/roblox-live-debugger/: SKILL.md
.codex/skills/roblox-live-debugger/agents/: openai.yaml
.codex/skills/roblox-live-debugger/references/: tool-guide.md
examples/mcp/: claude.mcp.json  codex-config.toml  continue-roblox-live.yaml  gemini-settings.json  opencode.jsonc
luau/: Bootstrap.lua  Client.lua  Config.lua  Router.lua
luau/Core/: Capabilities.lua  HandleRegistry.lua  Instances.lua  PropertyCatalog.lua  Result.lua  RingBuffer.lua  ScriptSupport.lua  Serializer.lua  SignalResolver.lua
luau/Services/: AdvancedInspector.lua  InstanceExplorer.lua  LiveExecutor.lua  PropertyReader.lua  RuntimeTools.lua  ScriptInspector.lua  WatchTools.lua
luau/Transport/: HttpClient.lua  HttpPollingTransport.lua  Manager.lua  WebSocketTransport.lua
skills/roblox-live-debugger/: SKILL.md
skills/roblox-live-debugger/references/: tool-guide.md
src/robloxliveinstance_mcp/: __init__.py  config.py  protocol.py  server.py
src/robloxliveinstance_mcp/bridge/: __init__.py  registry.py  server.py  session.py  websocket.py
src/robloxliveinstance_mcp/tools/: __init__.py  advanced.py  common.py  execution.py  instances.py  runtime.py  scripts.py  sessions.py  watches.py
tests/: test_authorization.py  test_bridge_server.py  test_config.py  test_mcp_stdio.py  test_registry.py  test_tools_common.py  test_websocket.py
